# peak-result

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: peak_bench.rs
src/: lib.rs
