[package]
name = "peak-result"
version = "0.0.1"
edition = "2021"
description = "A simple trait that extends the standard Result enum to allow you to run some code in case of error or success."
documentation = "https://github.com/FaveroFerreira/peak-result/blob/main/README.md#usage"
homepage = "https://github.com/FaveroFerreira/peak-result"
license = "MIT"
readme = "README.md"
keywords = ["result", "peak", "peak-result", "result-handling"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
